elisa oc script

--- a/my-chat-app/index.html
+++ b/my-chat-app/index.html
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
 <html>
+<head>
+<title>Meita Palvelupiste keskustelu</title>
+</head>
 <body>
-    <h1>Hello World</h1>
+<script id="oc-start-up" data-oc-service="6b76408e-a3d5-4dab-903f-9fd4a20efedc-2631-89E1FA4D8C26AC018666C611A521F50D7CB42825" data-main=https://occhat.elisa.fi/chatserver//Scripts/oc-chat src=https://occhat.elisa.fi/chatserver//Scripts/oc-chat-v2.js data-oc-language="fi_FI"></script>
 </body>
 </html>
